# store

./: Cargo.toml  Makefile  README.md
migrations/: 0001_users.sql  0002_products.sql  0003_categories.sql  0004_blogs.sql  0005_contact.sql  0005_contacts.sql  0006_payments.sql  0007_addresses.sql  0008_carts.sql  0008_orders.sql  0009_orders.sql  0009_relations.sql
src/: main.rs
src/controllers/: mod.rs
src/controllers/apis/: address.rs  blogs.rs  categories.rs  contact.rs  mod.rs  order.rs  payment.rs  product.rs  user.rs
src/controllers/pages/: about_us.rs  blogs.rs  checkout.rs  contact.rs  faqs.rs  forgot_password.rs  home.rs  info.rs  login.rs  mod.rs  page_not_found.rs  shop.rs  shopping_cart.rs  signup.rs  user.rs
src/controllers/relations/: address.rs  blogs.rs  categories.rs  mod.rs  order.rs  payment.rs  product.rs  user.rs
src/controllers/routes/: routes.rs
src/models/: mod.rs
src/models/db/: conn.rs  init.rs
src/models/entities/: address.rs  blog.rs  category.rs  contact.rs  entities.rs  order.rs  payment.rs  product.rs  user.rs
src/views/: about_us.html  base.html  blogs.html  checkout.html  contact.html  faqs.html  forgot_password.html  home.html  info.html  login.html  page_not_found.html  shop.html  shopping_cart.html  signup.html  user.html
src/views/user/: user_edit.html  user_info.html  user_row.html
